[package]
name = "bio-commander-mobile-bevy-shoot"
version = "0.0.1"
authors = ["Tristan Nguyen <trungupdate@gmail.com>"]
edition = "2021"
repository = "https://github.com/manolaz/bio-commander-mobile-bevy-shoot"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_remote"] }
leafwing-input-manager = "0.17"
rand = "0.9.2"
bevy_hanabi = "0.16"
avian2d = { version = "0.3" , features = [ "debug-plugin" ] } 